[package]
name = "mctokio"
version = "0.1.0"
authors = ["Joey Sacchini <joey@sacchini.net>"]
edition = "2018"
license = "APACHE 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcproto-rs = { git = "https://github.com/Twister915/mcproto-rs", branch = "master" }
tokio = { version = "0.2", features = ["rt-threaded", "io-driver", "io-util", "tcp", "time", "macros", "sync", "dns"] }
aes = "0.6.0"
flate2 = { version = "1.0.17", features = ["zlib"] }
anyhow = "1.0"
